--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@your-org/react-ui-components",
+  "name": "@cisseui/react-components",
   "version": "0.1.0",
   "description": "Modern React UI components including Table, Modal, and Drawer",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -10,10 +11,11 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "test": "jest",
+    "test": "jest --config jest.config.cjs",
     "lint": "eslint src --ext .ts,.tsx",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepublishOnly": "npm run test && npm run lint && npm run build"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -35,10 +37,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.59.0",
     "babel-jest": "^29.5.0",
     "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0",
@@ -52,6 +56,13 @@
     "modal",
     "drawer"
   ],
-  "author": "Your Name",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/your-org/react-ui-components.git"
+  },
+  "author": "cissedev",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
