fix: add npm registry configuration for GitHub Packages

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "author": "cissedev",
   "license": "MIT",
   "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
     "access": "public"
   }
 }
