fix: update package name and registry configuration

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
-@cisseui:registry=https://npm.pkg.github.com
+@tcisse:registry=https://npm.pkg.github.com
