--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "rollup -c",
     "test": "jest --config jest.config.cjs",
     "lint": "eslint src --ext .ts,.tsx",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prepublishOnly": "npm run test && npm run lint && npm run build",
@@ -37,6 +39,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -49,6 +52,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "prettier": "^3.4.2",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
