--- a/package.json
+++ b/package.json
@@ -35,24 +35,16 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@storybook/react": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.59.0",
     "babel-jest": "^29.5.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^3.4.2",
+    "rollup": "^4.34.5",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
@@ -76,6 +68,5 @@
   "engines": {
     "node": ">=16",
     "pnpm": ">=8"
-  },
-  "packageManager": "pnpm@8.x"
+  }
 }
