--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cisseui/react-components",
-  "version": "1.1.1",
-  "description": "Modern React UI components including Table, Modal, and Drawer",
+  "version": "1.2.0",
+  "description": "Modern React UI components including Table, Modal, Drawer, and PricingTable",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -63,7 +63,10 @@
     "ui",
     "table",
     "modal",
-    "drawer"
+    "drawer",
+    "pricing",
+    "pricing-table",
+    "pricing-card"
   ],
   "author": "cissedev",
   "license": "MIT",
